refactor: 实时报告计算优化